Backend hardening: ValetService exception types, Timah tool suite, cleanups
- ValetService: replace IllegalArgumentException/IllegalStateException with
  ResponseStatusException (400 for not-found, 422 for missing branch GPS coords)
- TimahAiService: add get_services and get_booking_status tools, completing
  the full 4-tool suite (get_available_slots, get_services,
  get_booking_status, create_booking)
- Add MalaysiaCalendarService, consolidating calendar-compliance logic
- PasswordResetService: reuse a static SecureRandom instead of allocating
  per call
- UserDirectoryService: replace collect(Collectors.toList()) with .toList()
- ToyyibPayService: replace manual MD5 hex loop with HexFormat; use
  injected ObjectMapper bean instead of a per-instance field
- Remove unused SystemLog/ShopClosure entities and repositories
- Add Flyway V14 migration restoring booked_count >= 0 constraint
- Add ValetServiceTest and NoShowAutomationCronTest
- Normalize line endings repo-wide (CRLF)